--- a/Menu.form
+++ b/Menu.form
@@ -60,14 +60,14 @@
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="780" y="40" width="480" height="40"/>
+              <AbsoluteConstraints x="790" y="40" width="470" height="40"/>
             </Constraint>
           </Constraints>
 
           <Layout>
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <EmptySpace min="0" pref="480" max="32767" attributes="0"/>
+                  <EmptySpace min="0" pref="470" max="32767" attributes="0"/>
               </Group>
             </DimensionLayout>
             <DimensionLayout dim="1">
@@ -378,7 +378,7 @@
                     </Property>
                     <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
                       <StringArray count="7">
-                        <StringItem index="0" value="&#xa0;"/>
+                        <StringItem index="0" value=" "/>
                         <StringItem index="1" value="cliente_id"/>
                         <StringItem index="2" value="nombre"/>
                         <StringItem index="3" value="email"/>
@@ -771,11 +771,12 @@
                           <Font name="Roboto Light" size="18" style="0"/>
                         </Property>
                         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                          <StringArray count="4">
+                          <StringArray count="5">
                             <StringItem index="0" value="&#xa0;"/>
-                            <StringItem index="1" value="nombre"/>
-                            <StringItem index="2" value="cantidad"/>
-                            <StringItem index="3" value="activo"/>
+                            <StringItem index="1" value="material_id"/>
+                            <StringItem index="2" value="nombre"/>
+                            <StringItem index="3" value="cantidad"/>
+                            <StringItem index="4" value="activo"/>
                           </StringArray>
                         </Property>
                         <Property name="toolTipText" type="java.lang.String" value=""/>
