--- a/Menu.form
+++ b/Menu.form
@@ -1194,15 +1194,16 @@
                               <Font name="Roboto Light" size="18" style="0"/>
                             </Property>
                             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                              <StringArray count="8">
+                              <StringArray count="9">
                                 <StringItem index="0" value="&#xa0;"/>
-                                <StringItem index="1" value="nombre_1"/>
-                                <StringItem index="2" value="nombre_2"/>
-                                <StringItem index="3" value="apellidos"/>
-                                <StringItem index="4" value="puesto"/>
-                                <StringItem index="5" value="email"/>
-                                <StringItem index="6" value="telefono"/>
-                                <StringItem index="7" value="activo"/>
+                                <StringItem index="1" value="personal_id"/>
+                                <StringItem index="2" value="nombre_1"/>
+                                <StringItem index="3" value="nombre_2"/>
+                                <StringItem index="4" value="apellidos"/>
+                                <StringItem index="5" value="puesto"/>
+                                <StringItem index="6" value="email"/>
+                                <StringItem index="7" value="telefono"/>
+                                <StringItem index="8" value="activo"/>
                               </StringArray>
                             </Property>
                             <Property name="toolTipText" type="java.lang.String" value=""/>
