--- a/Menu.form
+++ b/Menu.form
@@ -1614,12 +1614,13 @@
                               <Font name="Roboto Light" size="18" style="0"/>
                             </Property>
                             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                              <StringArray count="5">
+                              <StringArray count="6">
                                 <StringItem index="0" value="&#xa0;"/>
-                                <StringItem index="1" value="nombre"/>
-                                <StringItem index="2" value="email"/>
-                                <StringItem index="3" value="telefono"/>
-                                <StringItem index="4" value="activo"/>
+                                <StringItem index="1" value="provedor_id"/>
+                                <StringItem index="2" value="nombre"/>
+                                <StringItem index="3" value="email"/>
+                                <StringItem index="4" value="telefono"/>
+                                <StringItem index="5" value="activo"/>
                               </StringArray>
                             </Property>
                             <Property name="toolTipText" type="java.lang.String" value=""/>
