--- a/Menu.form
+++ b/Menu.form
@@ -2366,10 +2366,10 @@
                             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
                               <StringArray count="6">
                                 <StringItem index="0" value="&#xa0;"/>
-                                <StringItem index="1" value="provedor_id"/>
+                                <StringItem index="1" value="id"/>
                                 <StringItem index="2" value="nombre"/>
-                                <StringItem index="3" value="email"/>
-                                <StringItem index="4" value="telefono"/>
+                                <StringItem index="3" value="materiales"/>
+                                <StringItem index="4" value="proporcion"/>
                                 <StringItem index="5" value="activo"/>
                               </StringArray>
                             </Property>
